cart scrolling on mobile fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -128,7 +128,7 @@ nav {
   -webkit-overflow-scrolling: touch;
 
   .modal {
-    @apply relative bg-white bg-opacity-30 backdrop-blur-lg w-full h-auto max-h-[70vh] max-w-sm rounded-xl p-6 overflow-auto;
+    @apply relative bg-white bg-opacity-30 backdrop-blur-lg w-full h-auto max-w-sm rounded-xl p-6 overflow-hidden;
     -webkit-overflow-scrolling: touch;
     overscroll-behavior: contain;
   }
